# Course_Generator

service/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.py
service/src/app/: logging_config.py  main.py  settings.py
service/src/app/application/: __init__.py
service/src/app/application/ai_agents/lesson_content/: base_agent.py  example_generator.py  (+5 more)
service/src/app/application/use_cases/: __init__.py  create_item.py  generate_course_content.py
service/src/app/application/workflows/: __init__.py  ai_graph.py
service/src/app/domain/: __init__.py
service/src/app/domain/entities/: course.py  item.py  lesson.py
service/src/app/domain/events/: __init__.py
service/src/app/domain/repositories/: item_repository.py
service/src/app/domain/value_objects/: ids.py
service/src/app/infrastructure/llm/: __init__.py  llm_client.py
service/src/app/infrastructure/repositories/: in_memory_item_repository.py
service/src/app/interfaces/: __init__.py
service/src/app/interfaces/api/: middleware.py  schemas.py
service/src/app/tests/: test_ai_echo.py  test_course_generation.py  test_use_case.py
service/tests/: conftest.py
service/tests/integration/: test_lesson_generation_api.py
service/tests/unit/ai_agents/: conftest.py
service/tests/unit/ai_agents/lesson_content/: test_example_generator.py  test_learning_objectives.py  test_lesson_assembler.py  test_lesson_body.py  test_quiz_creator.py  test_topic_validator.py
service/tests/unit/workflows/: conftest.py
service/tests/unit/workflows/lesson_content_workflow/: test_workflow.py
(+15 files in other folders)
